-- JS классы разбиты по файлам.  -- Реализована авторизация

--- a/loginForm.html
+++ b/loginForm.html
@@ -1,17 +1,17 @@
 <div id="loginPanel">
-	<div class="loginFormHead">Авторизация</div>
+	<div class="loginFormHead shadowText">Авторизация</div>
 	<div class="clear"></div>
 	<div class="loginFormBody">
 		<div class="inputLine">
 			<p>
-				<label for="login"> Логин: </label>
+				<label for="login" class="shadowText"> Логин: </label>
 				<input id="login" type="text" value="">
 			</p>
 		</div>
 		<div class="clear"></div>
 		<div class="inputLine">
 			<p>
-				<label for="password"> Пароль: </label>
+				<label for="password" class="shadowText"> Пароль: </label>
 				<input id="password" type="text" value="">
 			</p>
 		</div>
