-- Добавлен метод для подсчета эллементов в объекте  -- Добавлен пункт меню "Категории типов"  -- Создан класс REST. Добавлен метод REST "get"  -- Реализован метод получения списка категорий типов  -- Добавлен метод получения токена из хранилища

--- a/controlPanel.html
+++ b/controlPanel.html
@@ -1,6 +1,7 @@
 <div id="topMenu">
 	<div class="menuItem shadowText" data-action="main">Главная</div>
 	<div class="menuItem shadowText" data-action="objects">Объекты</div>
+	<div class="menuItem shadowText" data-action="categoriesTypes">Категории типов</div>
 	<div class="menuItem shadowText" data-action="logout">Выход</div>
 </div>
 <div id="body">
