--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="/js/actions.js"></script>
 <script src="/js/ajaxLoader.js"></script>
 <script src="/js/procedure.js"></script>
+<script src="/js/tools.js"></script>
+<script src="/js/REST.js"></script>
 
 </head>
 <body>
