-- В списке категорий типов добавлены кнопки редактирования и удаления  -- Добавлен шаблон для окна подтверждения или отмены  -- Добавлено мето для вывода мобальных окон  -- Добавлены методы для удаления категорий типов  -- Реализован класс для динамического создания модальных окон  -- В объекте получающем шаблон реализовано заполнение шаблона параметрами из контроллера после его вывода

--- a/categoriesTypes.html
+++ b/categoriesTypes.html
@@ -9,6 +9,8 @@
 		<div class="contentLine gray hide">
 			<div class="contentColumn id"></div>
 			<div class="contentColumn name"></div>
+			<div class="contentColumn edit"><img data-action="editTypesCategory" data-id="" class="button" src="/images/edit.png" /></div>
+			<div class="contentColumn remove"><img data-action="deleteTypeCategory" data-id="" class="button" src="/images/delete.png" /></div>
 		</div>
 	</div>
 </div>
