--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <script src="/js/ajaxLoader.js"></script>
 <script src="/js/procedure.js"></script>
 <script src="/js/tools.js"></script>
+<script src="/js/modalWindow.js"></script>
 <script src="/js/REST.js"></script>
 
 </head>
 <body>
 	<div id="main">
 
+	</div>
+	<div id="fullWindow" style="display:none;">
+		<div id="fullHeight">
+		</div>
 	</div>
 </body>
 </html>
