--- a/editTypesCategoryWindow.html
+++ b/editTypesCategoryWindow.html
@@ -1,6 +1,17 @@
 <div id="editTypesCategoryWindow" class="window">
+	<input type="hidden" id="id" value="" />
 	<div class="head">
-		<div class="label">Категории типов</div>
+		<div class="label shadowText">Категории типов</div>
 		<div class="closeButton"><img src="/images/close.png" class="button" data-action="closeWindow"></div>
+	</div>
+	<div class="body">
+		<div class="inputLine">
+			<p>
+				<label for="name" class="shadowText"> Название: </label>
+				<input id="name" type="text" value="">
+			</p>
+		</div>	
+		<div class="okButton button shadowText">ОК</div>
+		<div class="cancelButton button shadowText">Отмена</div>
 	</div>
 </div>
