--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/js/ui/themes/metro/easyui.css">
+<link rel="stylesheet" type="text/css" href="/js/ui/themes/icon.css">
+<script type="text/javascript" src="/js/ui/jquery.easyui.min.js"></script>
 <script src="/js/authorization.js"></script>
 <script src="/js/ajaxBase.js"></script>
 <script src="/js/template.js"></script>
